[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/UI/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/GUI.tres" type="Theme" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 72.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 72.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="ToolButton" parent="HBoxContainer"]
margin_left = 150.0
margin_right = 248.0
margin_bottom = 72.0
text = "Reset"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 0 )
custom_styles/separator = SubResource( 3 )

[node name="Back" type="ToolButton" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 424.0
margin_bottom = 72.0
text = "Back"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 428.0
margin_right = 508.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 0 )
custom_styles/separator = SubResource( 4 )

[node name="Advance" type="ToolButton" parent="HBoxContainer"]
margin_left = 512.0
margin_right = 657.0
margin_bottom = 72.0
text = "Advance"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 661.0
margin_right = 741.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 0 )
custom_styles/separator = SubResource( 5 )

[node name="Options" type="ToolButton" parent="HBoxContainer"]
margin_left = 745.0
margin_right = 873.0
margin_bottom = 72.0
text = "Options"

[node name="OptionsPane" type="ColorRect" parent="."]
visible = false
margin_left = 192.0
margin_top = 128.0
margin_right = 832.0
margin_bottom = 512.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )

[node name="MasterVolume" type="HSlider" parent="OptionsPane"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 192.0
margin_top = -144.0
margin_right = -64.0
margin_bottom = -128.0
min_value = -20.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="OptionsPane/MasterVolume"]
margin_left = -176.0
margin_top = -24.0
margin_right = -8.0
margin_bottom = 48.0
bbcode_enabled = true
bbcode_text = "[center]Master Volume[/center]"
text = "Master Volume"
scroll_active = false

[node name="SFXVolume" type="HSlider" parent="OptionsPane"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 192.0
margin_top = -56.0
margin_right = -64.0
margin_bottom = -40.0
min_value = -20.0
max_value = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="OptionsPane/SFXVolume"]
margin_left = -176.0
margin_top = -24.0
margin_right = -8.0
margin_bottom = 48.0
bbcode_enabled = true
bbcode_text = "[center]SFX Volume[/center]"
text = "SFX Volume"
scroll_active = false

[node name="MusicVolume" type="HSlider" parent="OptionsPane"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 24.0
margin_right = -64.0
margin_bottom = 40.0
min_value = -20.0
max_value = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="OptionsPane/MusicVolume"]
margin_left = -176.0
margin_top = -24.0
margin_right = -8.0
margin_bottom = 48.0
bbcode_enabled = true
bbcode_text = "[center]Music Volume[/center]"
text = "Music Volume"
scroll_active = false

[node name="Return" type="ToolButton" parent="OptionsPane"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = -72.0
margin_right = -256.0
margin_bottom = -27.0
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBoxContainer/Advance" to="." method="_on_Advance_pressed"]
[connection signal="pressed" from="HBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="value_changed" from="OptionsPane/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="OptionsPane/SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="value_changed" from="OptionsPane/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="OptionsPane/Return" to="." method="_on_Return_pressed"]
